<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ExpandoLayout="http://schemas.android.com/apk/res/com.djpsoft.remote"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/trackpad"
            android:id="@+id/go_trackpad"/>
        <com.djpsoft.moreDroid.ExpandoLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ExpandoLayout:text="@string/trackpad_settings"
            ExpandoLayout:textSize="20"
            ExpandoLayout:showAndHideChildren="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dip"
                android:paddingRight="25dip">
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_click"
                    android:id="@+id/tap_to_click"/>
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/double_tap_and_drag"
                    android:id="@+id/double_tap_and_drag"/>
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_finger_tap_right_click"
                    android:id="@+id/two_finger_tap_right_click"/>
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_finger_drag_scroll"
                    android:id="@+id/two_finger_drag_scroll"/>
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_buttons"
                    android:id="@+id/show_buttons"/>
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/landscape"
                    android:id="@+id/landscape"/>
            </LinearLayout>
        </com.djpsoft.moreDroid.ExpandoLayout>
        <com.djpsoft.moreDroid.ExpandoLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ExpandoLayout:text="@string/connection_settings"
            ExpandoLayout:textSize="20"
            ExpandoLayout:showAndHideChildren="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dip"
                android:paddingRight="25dip">
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/handshake_first"
                    android:id="@+id/handshake_first"/>
                <TextView
                    android:text="@string/server_hostname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hostname"
                    android:text="192.168.1.6"/>
                <TextView
                    android:text="@string/server_macaddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/macaddress"
                    android:text=""/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_server"
                    android:id="@+id/send_ping"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_wol"
                    android:id="@+id/send_wol"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_wifi"
                    android:id="@+id/enable_wifi"
                    android:visibility="gone"/>
            </LinearLayout>
        </com.djpsoft.moreDroid.ExpandoLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_touch_view"
            android:id="@+id/go_testtouch"
            android:visibility="gone"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gamepad"
            android:id="@+id/go_gamepad"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
